--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,3 +1,7 @@
 TEAM_ID=
-BUNDLE_ID=de.dbauer.expensetracker.RecurringExpenseTracker
-APP_NAME=RecurringExpenseTracker
+
+PRODUCT_NAME=RecurringExpenseTracker
+PRODUCT_BUNDLE_IDENTIFIER=de.dbauer.expensetracker.RecurringExpenseTracker$(TEAM_ID)
+
+CURRENT_PROJECT_VERSION=1
+MARKETING_VERSION=1.0
