--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,10 @@ androidx-navigation-compose = "2.9.1"
 androidx-test-junit = "1.3.0"
 biometric = "1.1.0"
 colorpicker = "1.1.3"
+compose-material-icons-extended = "1.7.3"
+compose-material3 = "1.9.0"
 compose-plugin = "1.10.0"
+compose-ui = "1.10.0"
 composeHotReload = "1.0.0"
 glance = "1.2.0-rc01"
 koin = "4.1.1"
@@ -41,8 +44,16 @@ androidx-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:life
 androidx-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "androidx-navigation-compose" }
 androidx-test-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-junit" }
 compose-colorpicker = { module = "com.github.skydoves:colorpicker-compose", version.ref = "colorpicker" }
-koin-android = { module = "io.insert-koin:koin-android" }
+compose-components-resources = { module = "org.jetbrains.compose.components:components-resources", version.ref = "compose-ui" }
+compose-foundation = { module = "org.jetbrains.compose.foundation:foundation", version.ref = "compose-ui" }
+compose-material-icons-extended = { module = "org.jetbrains.compose.material:material-icons-extended", version.ref = "compose-material-icons-extended" }
+compose-material3 = { module = "org.jetbrains.compose.material3:material3", version.ref = "compose-material3" }
+compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "compose-ui" }
+compose-ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "compose-ui" }
 compose-ui-backhandler = { module = "org.jetbrains.compose.ui:ui-backhandler", version.ref = "compose-plugin" }
+compose-ui-tooling = { module = "org.jetbrains.compose.ui:ui-tooling", version.ref = "compose-ui" }
+compose-ui-tooling-preview = { module = "org.jetbrains.compose.ui:ui-tooling-preview", version.ref = "compose-ui" }
+koin-android = { module = "io.insert-koin:koin-android" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose" }
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose" }
